--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Programa de Colas</title>
+    <title>Chat bdb</title>
 </head>
 
 <body>
-    <h1>Programa de Colas</h1>
-    <script src="socket.io/socket.io.js"></script>
-    <script src="js/socket-custom.js"></script>
+    <h1>Chat Sockets BDB Salas</h1>
+    <form action="chat.html">
+        <input type="text" name="nombre" placeholder="nombre">
+        <input type="text" name="sala" placeholder="sala">
+        <button type="submit">
+            Ingresar
+        </button>
+    </form>
 
 </body>
 
