--- a/public/chat.html
+++ b/public/chat.html
@@ -90,42 +90,12 @@
                                 <div class="chat-right-aside">
                                     <div class="chat-main-header">
                                         <div class="p-20 b-b">
-                                            <h3 class="box-title">Sala de chat <small>Video Juegos</small></h3>
+                                            <h3 class="box-title">Sala de chat <small>Banco de Bogotá</small></h3>
                                         </div>
                                     </div>
 
                                     <div class="chat-rbox">
-                                        <ul class="chat-list p-20" id="divChatbox">
-                                            <!--chat Row 
-                                            <li>
-                                                <div class="chat-img"><img src="assets/images/users/1.jpg" alt="user" /></div>
-                                                <div class="chat-content">
-                                                    <h5>James Anderson</h5>
-                                                    <div class="box bg-light-info">Lorem Ipsum is simply dummy text of the printing & type setting industry.</div>
-                                                </div>
-                                                <div class="chat-time">10:56 am</div>
-                                            </li>-->
-                                            <!--chat Row -->
-                                            <!--<li>
-                                                <div class="chat-img"><img src="assets/images/users/2.jpg" alt="user" /></div>
-                                                <div class="chat-content">
-                                                    <h5>Bianca Doe</h5>
-                                                    <div class="box bg-light-info">It’s Great opportunity to work.</div>
-                                                </div>
-                                                <div class="chat-time">10:57 am</div>
-                                            </li>-->
-                                            <!--chat Row -->
-                                            <!--<li class="reverse">
-                                                <div class="chat-content">
-                                                    <h5>Steave Doe</h5>
-                                                    <div class="box bg-light-inverse">It’s Great opportunity to work.</div>
-                                                </div>
-                                                <div class="chat-img"><img src="assets/images/users/5.jpg" alt="user" /></div>
-                                                <div class="chat-time">10:57 am</div>
-                                            </li>-->
-
-
-                                        </ul>
+                                        <ul class="chat-list p-20" id="divChatbox"></ul>
                                     </div>
                                     <div class="card-body b-t">
                                         <form id="formEnviar">
@@ -158,7 +128,7 @@
             <!-- footer -->
             <!-- ============================================================== -->
             <footer class="footer">
-                Super Chat - Fernando Herrera
+                Chat BDB - Javier Rodriguez
             </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
